--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-import": "^2.26.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.7"
   }
