--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.15.0",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.0",
+    "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.7"
   }
