define more proper

--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
   "name": "bratik",
+  "author": "Sergey Borovikov",
   "version": "0.2.1",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/bratik.umd.js",
-  "module": "./dist/bratik.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/bratik.es.js",
-      "require": "./dist/bratik.umd.js"
-    }
-  },
+  "main": "./dist/bratik.js",
+  "types": "./dist/bratik.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
