--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "./dist/bratik.d.ts",
   "scripts": {
     "dev": "vite",
+    "public": "tsc --project tsconfig.public.json",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
