--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/bratik.d.ts",
   "scripts": {
     "dev": "vite",
-    "public": "tsc --project tsconfig.public.json",
+    "public": "sass src/style.sass public/style.css --no-source-map && tsc --project tsconfig.public.json",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
