--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "./dist/bratik.es.js",
   "main": "./dist/bratik.cjs.js",
   "types": "./dist/bratik.d.ts",
+  "files": [ "/dist" ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/foretoo/bratik.git"
