--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.0",
     "sass": "^1.51.0",
+    "round-polygon": "^0.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
     "vite-plugin-dts": "^1.1.1"
