--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["src/lib/linked-list.ts"]
+  "include": ["src"]
 }
