on v0.5.2 ellipse, mask, and clip were added

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bratik",
   "version": "0.5.3",
   "description": "Tiny, p5.js-like, typed toolkit to cakewalk through a 2D rendering context of Canvas API",
-  "keywords": [ "canvas", "2d", "toolkit", "draw", "geometry", "animate" ],
+  "keywords": [ "canvas", "2d", "toolkit", "draw", "geometry", "animate", "loop" ],
   "author": "Sergey Borovikov",
   "license": "MIT",
   "type": "module",
