--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-esbuild": "^4.9.1",
     "rollup-plugin-eslint-bundle": "^7.0.0",
+    "rollup-plugin-iife": "^0.6.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-sass": "^1.2.12",
     "rollup-plugin-serve": "^1.1.0",
