--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "bratik",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "Tiny, p5.js-like, typed toolkit to cakewalk through a 2D rendering context of Canvas API",
   "keywords": [ "canvas", "2d", "toolkit", "draw", "geometry", "animate", "loop" ],
   "author": "Sergey Borovikov",
   "license": "MIT",
   "type": "module",
-  "main": "./dist/bratik.es.js",
-  "module": "./dist/bratik.es.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [ "./dist" ],
   "repository": {
